trying to parse

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ LDFLAGS := -m32
 CC		:= gcc
 CXX		:= g++
 CXXFLAGS := -m32
-TARGETS := addition
+TARGETS := calculator
 
 .PHONY: clean
 
@@ -15,7 +15,7 @@ TARGETS := addition
 
 all: $(TARGETS) 
 
-addition: calc.o
+calculator: calc.o
 
 clean :
 	rm -f *.o $(TARGETS)
